--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "OneToNine",
+  "start_url": "/",
   "short_name": "OneToNine",
   "icons": [
     {
@@ -28,7 +29,6 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/?homescreen=1",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
